--- a/src/style/components/components.scss
+++ b/src/style/components/components.scss
@@ -1,1 +1,4 @@
-@forward "./header.scss";
+@forward './header.scss';
+@forward './form.scss';
+@forward './button.scss';
+@forward './mainLayout.scss';
