--- a/src/style/typography.scss
+++ b/src/style/typography.scss
@@ -1,4 +1,4 @@
-@use './colors.scss';
+@use './colors.scss' as *;
 @mixin font-base {
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   font-size: 1.8rem;
@@ -23,6 +23,8 @@
 
 h1 {
   @include title;
+  text-align: center;
+  margin-bottom: 0.5em;
 }
 
 h2 {
@@ -35,10 +37,34 @@ p {
 
 a {
   @include font-base;
+  text-decoration: none;
+  transition: 200ms;
+  &:hover {
+    color: $white;
+  }
+}
+
+@mixin input {
+  border: 1px solid $main-color;
+  width: 20vw;
+  min-width: 200px;
+  height: 5vh;
+}
+
+input {
+  @include input;
+}
+
+textarea {
+  @include input;
+  resize: none;
 }
 
 label {
   @include font-base;
+  display: flex;
+  flex-direction: column;
+  margin: 2vh auto;
 }
 
 li {
