--- a/src/style/components/components.scss
+++ b/src/style/components/components.scss
@@ -3,3 +3,6 @@
 @forward './button.scss';
 @forward './mainLayout.scss';
 @forward './single-product-card.scss';
+@forward './footer.scss';
+@forward './mainLayout.scss';
+@forward './body.scss';
